--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,59 @@
 [project]
 name = "datawhisperer"
 version = "0.1.0"
-authors = [{ name = "JosueARz" }]
+authors = [{ name = "JosueARz", email = "josueayalaruiz@gmail.com" }]
 description = "Natural language interface for DataFrames using LLMs"
-license = { file = "LICENSE" }
 readme = "README.md"
+license = { file = "LICENSE" }
 requires-python = ">=3.8"
+keywords = ["LLM", "DataFrame", "pandas", "chatbot", "OpenAI", "Gemini"]
+classifiers = [
+  "Development Status :: 3 - Alpha",
+  "Intended Audience :: Developers",
+  "Topic :: Scientific/Engineering :: Artificial Intelligence",
+  "License :: OSI Approved :: Apache Software License",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.8",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+]
+
 dependencies = [
-    "openai==0.28.0",  
-    "pandas>=2.2.0",
-    "plotly>=5.0.0",
-    "google-generativeai>=0.8.0"
+  "openai>=0.28.0",
+  "pandas>=2.2.0",
+  "plotly>=5.0.0",
+  "google-generativeai>=0.8.0"
+]
+
+[project.optional-dependencies]
+dev = [
+  "pytest",
+  "pytest-cov",
+  "black",
+  "isort"
 ]
 
 [build-system]
 requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
-[tool.setuptools.packages.find]
-where = ["."]
+[tool.setuptools]
+packages = [
+  "datawhisperer",
+  "datawhisperer.code_executor",
+  "datawhisperer.llm_client",
+  "datawhisperer.prompt_engine",
+  "tests"
+]
+
+[tool.pytest.ini_options]
+addopts = "--cov=datawhisperer --cov-report=term-missing"
+testpaths = ["tests"]
+
+[tool.black]
+line-length = 100
+target-version = ["py38", "py39", "py310"]
+
+[tool.isort]
+profile = "black"
